--- a/auth-user/src/main/resources/application.yml
+++ b/auth-user/src/main/resources/application.yml
@@ -2,12 +2,20 @@ server:
   port: 8080
 spring:
   application:
-    name: msk-shopping
+    name: msk-shopping-user
   datasource:
-    url: jdbc:h2:tcp://localhost/~/msk_shop
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: 1234
+#    url: jdbc:h2:tcp://localhost/~/msk_shop
+#    driver-class-name: org.h2.Driver
+#    username: sa
+#    password: 1234
+    hikari:
+      jdbc-url: jdbc:mysql://localhost:3306/coupon?useUnicode=yes&characterEncoding=UTF-8&rewriteBatchedStatements=true
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      maximum-pool-size: 10
+      max-lifetime: 30000
+      connection-timeout: 3000
+      username: abcd
+      password: 1234
   jpa:
     hibernate:
       ddl-auto: update
@@ -17,14 +25,14 @@ spring:
         #    # show_sql: true
         format_sql: true
   #        default_batch_fetch_size: 10
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
   data:
     redis:
       host: localhost
-      port: 6379
+      port: 6380
 
 #mybatis:
 #  configuration:
@@ -41,3 +49,13 @@ jwt:
   sign_in:
     password:
       salt: flab
+
+management:
+  metrics:
+    tags:
+      application:
+        ${spring.application.name}
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
