--- a/monitoring/prometheus/config/prometheus.yml
+++ b/monitoring/prometheus/config/prometheus.yml
@@ -10,3 +10,8 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: [ 'host.docker.internal:8084' ]
+
+  - job_name: 'redis-exporter'
+    static_configs:
+#      - targets: [ 'redis-exporter:9121' ]
+      - targets: [ 'host.docker.internal:9121' ]
