--- a/auth-user/build.gradle
+++ b/auth-user/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-//	implementation project(':global-utils')
+	implementation project(':global-utils')
 }
 
 tasks.named('test') {
