--- a/coupon-redis/build.gradle
+++ b/coupon-redis/build.gradle
@@ -24,7 +24,8 @@ repositories {
 }
 
 dependencies {
-    implementation project(':auth-user') // Add jwt module as a dependency
+//    implementation project(':auth-user') // Add jwt module as a dependency
+    implementation project(':global-utils') // Add jwt module as a dependency
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
